--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,18 +1,18 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+    <ion-tab-button tab="camera" href="/tabs/camera">
+      <ion-icon aria-hidden="true" name="camera"></ion-icon>
+      <ion-label>Camera</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+    <ion-tab-button tab="calculator" href="/tabs/calculator">
+      <ion-icon aria-hidden="true" name="calculator"></ion-icon>
+      <ion-label>Calculator</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="result" href="/tabs/result">
+      <ion-icon aria-hidden="true" name="checkmark-circle"></ion-icon>
+      <ion-label>Result</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
