--- a/src/app/processing/processing.page.html
+++ b/src/app/processing/processing.page.html
@@ -3,6 +3,9 @@
     <ion-title>
       Processing
     </ion-title>
+    <ion-button slot="end" fill="clear" color="danger" (click)="cancelProcessing()">
+      Cancel
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
