Add dark mode toggle

--- a/src/app/processing/processing.page.html
+++ b/src/app/processing/processing.page.html
@@ -3,9 +3,6 @@
     <ion-title>
       Processing
     </ion-title>
-    <ion-button slot="end" fill="clear" color="danger" (click)="cancelProcessing()">
-      Cancel
-    </ion-button>
   </ion-toolbar>
 </ion-header>
 
@@ -32,5 +29,8 @@
         </ion-text>
       </ion-card-content>
     </ion-card>
+    <ion-button fill="clear" color="danger" (click)="cancelProcessing()">
+      Cancel
+    </ion-button>
   </div>
 </ion-content>
